--- a/client/pages/order/order.wxml
+++ b/client/pages/order/order.wxml
@@ -1,2 +1,12 @@
 <!--pages/order/order.wxml-->
-<text>pages/order/order.wxml</text>
+<image class='bg' src='../../images/bg.png' />
+<view class='un-logged' wx:if="{{!userInfo}}">
+  <view class='unlogged-user-wrapper'>
+    <view class='no-avatar'></view>
+    <view class='notice-text'>
+      <view class='un-logged-text'>未登录</view>
+      <view class='logIn-notice'>点击微信登录后可方便购物</view>
+    </view>
+  </view>
+  <button open-type='getUserInfo' bindgetuserinfo='tapToLog' class='logInBtn'>微信登录</button>
+</view>
